@@ -94,3 +94,4 @@ VDR Plugin 'satip' Revision History
 - Updated the command-line help and README.
 - Fixed the server teardown.
 - Removed the unnecessary config directory definition.
+- Added a fallback for older glibc libraries.
